--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ h3 {
   border-radius: 4px;
   padding: 10px;
   display: grid;
-  grid-template-columns: repeat(7, minmax(0, 1fr));
+  grid-template-columns: repeat(7, 1fr);
   grid-gap: 5px;
 }
 
@@ -104,7 +104,7 @@ h3 {
 
 .days {
   display: grid;
-  grid-template-columns: repeat(7, minmax(0, 1fr));
+  grid-template-columns: repeat(7, 1fr);
   grid-gap: 5px;
 }
 
@@ -130,11 +130,6 @@ h3 {
 .next-month {
   background-color: #f5f5f5;
   color: #aaa;
-}
-
-#pay-period-info {
-  margin-top: 10px;
-  text-align: center;
 }
 
 /* Table Styles */
