--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,3 @@
-/* base.css */
-
 /* Reset default browser styles */
 * {
   margin: 0;
@@ -9,10 +7,10 @@
 
 /* Global styles */
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  line-height: 1.5;
-  background-color: #f5f5f5;
+  line-height: 1.6;
+  background-color: #f0f8ff;
   color: #333;
 }
 
@@ -25,6 +23,8 @@ body {
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 10px;
+  font-weight: 700;
+  color: #1e88e5;
 }
 
 p {
