--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,5 +1,3 @@
-/* utilities.css */
-
 .text-center {
   text-align: center;
 }
@@ -14,4 +12,28 @@
 
 .mb-3 {
   margin-bottom: 30px;
+}
+
+.mt-1 {
+  margin-top: 10px;
+}
+
+.mt-2 {
+  margin-top: 20px;
+}
+
+.mt-3 {
+  margin-top: 30px;
+}
+
+.text-primary {
+  color: #2196f3;
+}
+
+.text-secondary {
+  color: #90caf9;
+}
+
+.text-danger {
+  color: #f44336;
 }
